styles/extras.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
    font-family: sans-serif;
}

body {
    background-image: url(https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1439,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1492120428/articles/2016/01/24/danny-devito-is-feeling-the-bern-despises-disgusting-donald-trump/160123-stern-devito-tease_iy4lx3);
    height: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
}

.wrapper {
    padding: 60px 50px 0px 50px;
}

/* Navigation Bar */
 

.navbar {
    background-color: #A6808C;
    overflow: hidden;
    width: 100%;
    position: fixed;
    top: 0%;
    left: 0;
    margin-bottom: 100px;
    box-shadow: 2px 2px 20px black;
    z-index: 1;
    opacity: 0.6;
    border-bottom-left-radius: 0%;
    border-bottom-right-radius: 60%;
  }
  
  .navbar:hover {
      opacity: 0.9;
  }
 
.navbar a {
    float: left;
    color: #565264;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.navbar a:hover {
    background-color: #CCB7AE;
    color: #706677;
}

.navbar a.active {
    background-color:#565264;
    color:#CCB7AE;
}

/* Headers */

h1,
h2,
h3 {
    text-align: center;
    padding: 10px;
    background-color: #CCB7AE; 
    border-radius: 5px;
}

h4 {
    text-align: center;
    padding: 10px;
    background-color: #A6808C; 
    border-radius: 5px;
}

body {
    background-image: url(https://img.thedailybeast.com/image/upload/c_crop,d_placeholder_euli9k,h_1439,w_2560,x_0,y_0/dpr_2.0/c_limit,w_740/fl_lossy,q_auto/v1492120428/articles/2016/01/24/danny-devito-is-feeling-the-bern-despises-disgusting-donald-trump/160123-stern-devito-tease_iy4lx3);
    padding-left: 50px;
    padding-right: 50px; 
    height: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
}


/* .nav-container {
    background-color: #A6808C;
    border-radius: 5px;
     
}

/* Main Containers */

.video-container,
.charity-container,
.website-container, 
.resource-container {
    /* border: 1px solid red; for debugging */
    background-color: rgba(94, 33, 33, 0.35);
    border-radius: 15px;
    padding: 10px 10px 100px 10px;
    margin-bottom: 5px;
    box-shadow: 1px 5px 30px gray;
    z-index: -1;
}

/* Containers for links */

.webLinks,
.resourceLinks,
.charityCauses {
    display: flex;  
    justify-content: center;
    justify-items: space-around;  
    padding: 10px;
    opacity: 1;
    /* border: 1px solid red; for debugging */
}

.moreVids {
    display: flex;
    justify-content: space-around;
    margin-top: 10px;   
}

/* Image and video links */

#memLink,
#memeLink,
#imgLink
 {
    height: 100px;
    width: auto;   
    padding: 2px; 
    border-radius: 15px;
    opacity: 1;
    background-color: white;
    margin: 10px 2px 2px 10px; 
}

#memLink {
    height: 100px;
    width: 100px;   
    padding: 10px; 
    border-radius: 15px;
    opacity: 1;
    background-color: white;
    margin: 10px 2px 2px 10px; 
}

.videoLink {
    display: flex;
    justify-content: center;
    padding: 5px;
    margin-top: 30px;
    box-shadow: 5px 5px 20px black;
    width: 448px;
    height: 272px;
    position: relative;
    z-index: 0;
}

.resp-iframe {
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
border: 0;
}

/* footer */

.footer-container {
    background-color: #A6808C;
    padding: 20px;
    text-align: center;
    margin-top: 10px;
    width: 100%;
}

/* easter egg */

#danny {
    position: fixed;
    bottom: 0;
    height: 100px;
}


@media (max-width:1000px) {
    
/* Main Containers */

.moreVids {
    display: flex;
    flex-wrap: wrap;    
}

.videoBox {
    overflow: hidden;
}

.resp-iframe {
position: absolute;
top: 0;
left: 0;
width: 100%;
border: 0;
}

.youtube-container {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
    flex-wrap: wrap;
}


/* Link Container */

    .webLinks,
    .resourceLinks,
    .charityCauses {
        display: flex;  
        justify-content: center;
        justify-items: space-around;  
        flex-wrap: wrap;
        padding: 10px;
        /* border: 1px solid red; for debugging */
    }

/* Image and video links */

    #memeLink,
    #imgLink {
        display: block;
        max-height: 150px;
        max-width: 150px;   
        width: auto;
        padding: 2px; 
        border-radius: 15px;
        opacity: 1;
        background-color: white;
        margin: 10px 2px 2px 10px; 

    }

    /* .videoLink {
        display: flex;
        flex-direction: column;
        padding: 5px;
        margin-top: 30px;
        box-shadow: 5px 5px 20px black;
        width: 448px;
        height: 272px;
        position: relative;
        z-index: 0;
    } */
    
    
}

